refactored subscriptions